<resources>
    <string name="app_name">Auto List</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="string_loading">Loading…</string>

    <string name="value_tv_price">$%1d</string>
    <string name="value_tv_year">%1d y.p.</string>

    <string name="value_tv_length">Length: %1s mm</string>
    <string name="value_tv_width">Width: %1s mm</string>
    <string name="value_tv_height">Height: %1s mm</string>
    <string name="value_tv_weight">Weight: %1s kg</string>

    <string name="value_tv_type">Type: %1s</string>
    <string name="value_tv_fuel_tank">Fuel tank: %1d l</string>
    <string name="value_tv_engine">Engine: %1d cm3</string>
    <string name="value_tv_power">Power: %1d hp</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price ($)</string>
    <string name="hint_year">Year</string>
    <string name="hint_power">Power (hp)</string>
    <string name="hint_fuel_tank">Fuel tank volume (l)</string>
    <string name="hint_engine">Engine displacement (cm3)</string>
    <string name="hint_length">Length (mm)</string>
    <string name="hint_width">Width (mm)</string>
    <string name="hint_height">Height (mm)</string>
    <string name="hint_weight">Weight (mm)</string>
    <string name="hint_type">Type</string>
    <string name="hint_manufacturer">manufacturer…</string>
    <string name="hint_model">model…</string>
    <string name="string_save">Save</string>

    <string name="warning_wrong_value">You must input ALL values!</string>
    <string name="string_remove_filter">Remove filter</string>
    <string name="string_sort_price_asc">Price ASC</string>
    <string name="string_sort_price_desc">Price DESC</string>
    <string name="string_sort_date_asc">Adding Date ASC</string>
    <string name="string_sort_date_desc">Adding Date DESC</string>
    <string name="string_saved">Saved</string>
    <string name="title_sort_by">Sort by…</string>
    <string name="title_enter_url">Enter url:</string>
</resources>
